# solana-native-program-template

./: Cargo.toml
e2e/: package-lock.json  package.json  setup.ts
e2e/tests/: counter.test.ts
src/: lib.rs
