[package]
name = "svm-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
hex = "0.4.3"
solana-program = "~1.17.12"

[lib]
name = "solana_program"
crate-type = ["cdylib", "lib"]
